Kubernetes/01-Deployment/05-servicio-usuarios-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: servicio-usuarios
  namespace: miissi
spec:
  selector:
    app: servicio-usuarios
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
