Kubernetes/01-Deployment/06-servicio-documentos-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: servicio-documentos
  namespace: miissi
spec:
  selector:
    app: servicio-documentos
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
